<resources>
    <string name="app_name">Lingua</string>
    <string name="simple_phonology_button">Simple Phonetics</string>
    <string name="complex_phonology_button">Advanced Phonetics</string>
    <string name="simple_syntax_button">Simple Syntax</string>
    <string name="complex_syntax_button">Advanced Syntax</string>
    <string name="menu_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favorites">Favorites</string>
    <string name="logo_desc">Logo</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Login Titles -->
    <string name="login">Login</string>
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <string name="google">Login With Google</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete Account</string>

    <!-- Register Title -->
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="reg_user">Username</string>
    <string name="register_button">Don\'t have an account? Register</string>
    <string name="goBack">Go Back to Login</string>

    <string name="web_client_id">305512126067-qvtr71rosohmhopiebnmh6qieots8vh5.apps.googleusercontent.com</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color_scheme">Color Scheme</string>
    <string name="primary_color">Primary Color</string>
    <string name="secondary_color">Secondary Color</string>
    <string name="notifications">Notifications</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="allow_toast_messages">Allow Toast Messages</string>
    <string name="filter_syntax">Filter Syntax</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="simple">Simple</string>
    <string name="complex">Complex</string>
    <string name="compound">Compound</string>
    <string name="favorites">Favorites</string>

    <string name="simple_phonology_description">A Simple Phonetics quiz great for beginner practice. Consists of multiple choice and fill in the blank questions.</string>
    <string name="complex_phonology_description">An advanced phonetics quiz. Includes questions on formant analysis using PRAAT and other advanced phonetics questions.</string>
    <string name="simple_syntax_description">A Simple Syntax quiz that is great for beginner practice. Consists of syntax tree problems involving phrases.</string>
    <string name="complex_syntax_description">An advanced syntax quiz. Consists of syntax tree problems involving entire sentences.</string>

    <string-array name="primary_options">
        <item>Purple</item>
        <item>Red</item>
        <item>Blue</item>
    </string-array>
    <string-array name="secondary_options">
        <item>White</item>
        <item>Grey</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="notification_options">
        <item>Daily</item>
        <item>Every 2 Days</item>
        <item>Weekly</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="correct_answer">Correct Answer: %s</string>
    <string name="progress_text">%d/%d</string>
    <string name="complete_text">You have completed the %s quiz</string>
    <string name="allow_vibrations">Allow Vibrations</string>
    <string name="allow_auth">Allow Authentication</string>
    <string name="notification_selection">Notification Frequency</string>
</resources>